--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@ head {
 }
 
 title {
-    background-color: chocolate;
-    font-family: "Verdana";
-    font-weight: 600;
-    color: blue;
+    font-family: sans-serif;
+    font-weight: 300;
+    font-color: white;
+
 }
 
 body {
     background-color: chartreuse;
     font-family: fantasy;
-    font-weight: 800;
+    font-weight: 500;
     color: black;
 }
 
