--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
 head {
-    background-color: crimson;
+
 }
 
 title {
-    font-family: sans-serif;
-    font-weight: 300;
-    font-color: white;
 
 }
 
 body {
-    background-color: chartreuse;
+    background-color: blue;
     font-family: fantasy;
     font-weight: 500;
-    color: black;
+    color: whitesmoke;
 }
 
 div {
