--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ title {
 }
 
 body {
-    background-color: blue;
-    font-family: fantasy;
+    background-color: aliceblue;
+    font-family: serif;
     font-weight: 500;
-    color: whitesmoke;
+    color: darkblue;
 }
 
 div {
