--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ title {
 }
 
 body {
-    background-color: aliceblue;
+    background-color: chocolate;
     font-family: serif;
     font-weight: 500;
-    color: darkblue;
+    color:wheat;
 }
 
 div {
